# educative-project

./: .gitignore  README.md
backend/: README.md  dev.db  index.js  migrate_add_user_columns.py  package-lock.json  package.json  pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  demo.py
backend/app/core/: config.py
collaborative/: sample.md
docs/: changes.md
docs/1.planning/: demand.md  favor-select.md  how-to-start.md  timeline.md
docs/2.techinical_details/: account_management.md  best_match.md  exercise_landing.md  request_details.md
docs/course-examples/: linux-shell-basic.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  router.ts
frontend/src/components/: AppLayout.vue  FeatureCard.vue
frontend/src/router/: index.js
frontend/src/utils/: safeJson.js
frontend/src/views/: CourseDetail.vue  Courses.vue  Favor.vue  Home.vue  Landing.vue  Login.vue  Register.vue  Student.vue  TagSelect.vue  Teacher.vue  TeacherRegister.vue
python_service/: README.md  app.py
